service/tests/models/snapshots/permissions/can_find_all_permissions_for_administrator@permissions.snap
---
source: tests/models/permissions.rs
expression: result
---
Ok(
    [
        Permission {
            id: 127,
            pid: dbd690cc-58dd-471b-93b6-7dbd3896d3da,
            name: "admin:access",
            description: Some(
                "Access the administrative application",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 126,
            pid: b6f84e22-91a7-4a31-a19f-0f0d4f4c7002,
            name: "orders:update",
            description: Some(
                "Update customer orders",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 125,
            pid: af3b7d51-6a4e-4ec4-8e41-2f5f6f1c9001,
            name: "orders:read",
            description: Some(
                "View customer orders",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 124,
            pid: 9e2f3a45-6b78-490c-d1e2-f3a4b5c6d7e8,
            name: "media:delete",
            description: Some(
                "Delete media assets",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 123,
            pid: 8d1e2f34-5a67-489b-c0d1-e2f3a4b5c6d7,
            name: "media:update",
            description: Some(
                "Update media references",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 122,
            pid: 6b0c9a41-7f23-4d5e-b8c9-a1e2f3d4c5b6,
            name: "media:create",
            description: Some(
                "Upload media assets",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 121,
            pid: 4c9f5278-6e0c-48a0-a8d3-e7a5f4b3a2c1,
            name: "media:read",
            description: Some(
                "View media assets",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 120,
            pid: 0b3ec0f0-0822-4d99-ac6c-4ac170db84a0,
            name: "products:delete",
            description: Some(
                "Delete products",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 119,
            pid: 3f421b2c-2391-4023-8982-494880941338,
            name: "products:update",
            description: Some(
                "Update products",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 118,
            pid: ae6cf161-c13e-45ce-9360-78556b434af1,
            name: "products:create",
            description: Some(
                "Create products",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 117,
            pid: 1a0c1635-b7d8-41e9-beb5-d3adcf445e2f,
            name: "products:read",
            description: Some(
                "View products",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 116,
            pid: f6dcb0c9-6bc1-4a9a-a4a4-e9781bd37b0a,
            name: "categories:delete",
            description: Some(
                "Delete categories",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 115,
            pid: eae74977-3aa0-48d3-9d49-58f04074fe41,
            name: "categories:update",
            description: Some(
                "Update categories",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 114,
            pid: 38a8e41a-fe68-43a9-bacb-0c51b8fb7d68,
            name: "categories:create",
            description: Some(
                "Create categories",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 113,
            pid: 92a1ba7e-d085-48a8-95be-7f6c06b83fd2,
            name: "categories:read",
            description: Some(
                "View categories",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 112,
            pid: c44ebd17-2733-4e59-842f-aecf5a6ad1bc,
            name: "users:delete",
            description: Some(
                "Delete users",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 111,
            pid: a41d21ad-e7f7-4674-b9a3-747a560999f6,
            name: "users:update",
            description: Some(
                "Update users",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 110,
            pid: b8c7c673-b75e-4c62-ab83-5aa48848b80f,
            name: "users:create",
            description: Some(
                "Create users",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 109,
            pid: 0ef803c9-5731-4d5a-a7ce-9d586949128f,
            name: "users:read",
            description: Some(
                "View users",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 105,
            pid: a0199d51-0147-477f-8778-070785ee81f3,
            name: "permissions:read",
            description: Some(
                "View permissions",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 108,
            pid: 77604ed0-36ae-4479-aec1-06c034d73b96,
            name: "permissions:delete",
            description: Some(
                "Delete permissions",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 106,
            pid: fcacd9c3-b217-4f42-a660-950dc93262c3,
            name: "permissions:create",
            description: Some(
                "Create permissions",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 104,
            pid: fddc6c29-9c36-41b6-be5a-3a31727a0a6c,
            name: "roles:delete",
            description: Some(
                "Delete roles",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 102,
            pid: 3fdbf302-c05a-4f58-82d8-1f7efa9ea8a6,
            name: "roles:create",
            description: Some(
                "Create roles",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 107,
            pid: 78bb2da0-3277-4cb1-ae42-ef94e60a3e21,
            name: "permissions:update",
            description: Some(
                "Update permissions",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 103,
            pid: 0a15ba95-6a25-40f6-85db-43b4078daee0,
            name: "roles:update",
            description: Some(
                "Update roles",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 101,
            pid: 9e230b11-cb47-4fe8-8bc0-5185fd9f9bb2,
            name: "roles:read",
            description: Some(
                "View roles",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
    ],
)
