service/tests/models/snapshots/permissions/can_find_permission_list_by_role@permissions.snap
---
source: tests/models/permissions.rs
expression: result
---
Ok(
    [
        Permission {
            id: 113,
            pid: 92a1ba7e-d085-48a8-95be-7f6c06b83fd2,
            name: "categories:read",
            description: Some(
                "View categories",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 105,
            pid: a0199d51-0147-477f-8778-070785ee81f3,
            name: "permissions:read",
            description: Some(
                "View permissions",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Permission {
            id: 101,
            pid: 9e230b11-cb47-4fe8-8bc0-5185fd9f9bb2,
            name: "roles:read",
            description: Some(
                "View roles",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
    ],
)
