service/tests/models/snapshots/permissions/can_find_permissions_read_permission_by_pid@permissions.snap
---
source: tests/models/permissions.rs
expression: result
---
Ok(
    Permission {
        id: 103,
        pid: a0199d51-0147-477f-8778-070785ee81f3,
        name: "permissions.read",
        description: Some(
            "View permissions",
        ),
        created_at: 2026-06-21T09:14:00+00:00,
        updated_at: 2026-06-21T09:15:00+00:00,
    },
)
