service/tests/models/snapshots/permissions/can_find_roles_write_permission_by_pid@permissions.snap
---
source: tests/models/permissions.rs
expression: result
---
Ok(
    Permission {
        id: 102,
        pid: 3fdbf302-c05a-4f58-82d8-1f7efa9ea8a6,
        name: "roles:write",
        description: Some(
            "Create and update roles",
        ),
        created_at: 2026-06-21T09:12:00+00:00,
        updated_at: 2026-06-21T09:13:00+00:00,
    },
)
